--- a/blog-server-api/Cargo.toml
+++ b/blog-server-api/Cargo.toml
@@ -33,3 +33,7 @@ rbs = { version = "4.3" }
 rbatis = { version = "4.3" }
 rbdc-sqlite = { version = "4.3" }
 async-trait = { version = "0.1.68" }
+password-hash = "0.5.0"
+argon2 = "0.5.0"
+jsonwebtoken = "8.3.0"
+chrono = "0.4.26"
