--- a/blog-server-api/Cargo.toml
+++ b/blog-server-api/Cargo.toml
@@ -31,8 +31,9 @@ hyper = { version = "0.14.26", features = ["full"] }
 serde = { version = "1.0.160", features = ["derive"] }
 rbs = { version = "4.3" }
 rbatis = { version = "4.3" }
-rbdc-sqlite = { version = "4.3" }
+rbdc-mysql = { version = "4.3" }
 async-trait = { version = "0.1.68" }
 password-hash = "0.5.0"
 argon2 = "0.5.0"
 jsonwebtoken = "8.3.0"
+dotenv = "0.15"
