--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -14,6 +14,11 @@ jobs:
 
     runs-on: ubuntu-latest
 
+    env:
+      JWT_SECRET: ""
+      SERVER_ADDRESS: ""
+      PG_URL: ""
+
     steps:
     - uses: actions/checkout@v3
     - name: Build
