--- a/blog-server-api/Cargo.toml
+++ b/blog-server-api/Cargo.toml
@@ -48,3 +48,5 @@ async-trait = { version = "0.1.68" }
 password-hash = "0.5.0"
 argon2 = "0.5.0"
 jsonwebtoken = "8.3.0"
+once_cell = "1.18.0"
+chrono = "0.4.29"
