--- a/blog-server-api/Cargo.toml
+++ b/blog-server-api/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.0.1"
 edition = "2021"
 
 [features]
-ssr = ["blog-ui", "serde_json"]
+ssr = ["blog-ui", "serde_json", "sitemap-rs"]
 
 [dependencies.screw-components]
 git = "https://github.com/Tikitko/screw.git"
@@ -50,3 +50,4 @@ argon2 = "0.5.0"
 jsonwebtoken = "8.3.0"
 once_cell = "1.18.0"
 chrono = "0.4.29"
+sitemap-rs = { version = "0.2.0", optional = true }
