--- a/blog-server-api/Cargo.toml
+++ b/blog-server-api/Cargo.toml
@@ -51,3 +51,4 @@ jsonwebtoken = "8.3.0"
 once_cell = "1.18.0"
 chrono = "0.4.29"
 sitemap-rs = { version = "0.2.0", optional = true }
+validator = { version = "0.16.1" }
