--- a/blog-server-api/Cargo.toml
+++ b/blog-server-api/Cargo.toml
@@ -53,3 +53,6 @@ chrono = "0.4.29"
 sitemap-rs = { version = "0.2.0", optional = true }
 validator = { version = "0.16.1" }
 reqwest = { version = "0.11.20", features = ["json"] }
+sha2 = "0.10.0"
+hmac = "0.12.1"
+hex = "0.4.3"
