--- a/blog-server-api/Cargo.toml
+++ b/blog-server-api/Cargo.toml
@@ -5,6 +5,8 @@ edition = "2021"
 
 [features]
 ssr = ["blog-ui", "serde_json", "sitemap-rs"]
+yandex = ["reqwest", "blog-ui?/yandex"]
+telegram = ["sha2", "hmac", "hex", "blog-ui?/telegram"]
 
 [dependencies.screw-components]
 git = "https://github.com/Tikitko/screw.git"
@@ -47,9 +49,12 @@ rbdc-pg = { version = "4.3" }
 async-trait = { version = "0.1.68" }
 password-hash = "0.5.0"
 argon2 = "0.5.0"
-jsonwebtoken = "8.3.0"
+jsonwebtoken = "9.1.0"
 once_cell = "1.18.0"
 chrono = "0.4.29"
 sitemap-rs = { version = "0.2.0", optional = true }
 validator = { version = "0.16.1" }
-reqwest = { version = "0.11.20", features = ["json"] }
+reqwest = { version = "0.11.20", features = ["json"], optional = true }
+sha2 = { version = "0.10.0", optional = true }
+hmac = { version = "0.12.1", optional = true }
+hex = { version = "0.4.3", optional = true }
