chore: service defacing

--- a/deploy/vars.yml
+++ b/deploy/vars.yml
@@ -36,4 +36,4 @@ DAEMON:
   EXEC_START: 
   SERVICE_NAME: 
   SERVICES_FOLDER: /etc/systemd/system
-  SYSLOG_IDENTIFIER: TikitkoBlog
+  SYSLOG_IDENTIFIER:
