--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -21,6 +21,7 @@ jobs:
       JWT_SECRET: ""
       SERVER_ADDRESS: ""
       PG_URL: ""
+      RABBIT_URL: ""
       TELEGRAM_BOT_TOKEN: ""
 
       TELEGRAM_BOT_LOGIN: ""
