--- a/blog-server-api/Cargo.toml
+++ b/blog-server-api/Cargo.toml
@@ -53,7 +53,7 @@ jsonwebtoken = "9.1.0"
 once_cell = "1.18.0"
 chrono = "0.4.29"
 sitemap-rs = { version = "0.2.0", optional = true }
-validator = { version = "0.16.1" }
+validator = { version = "0.16.1", features = ["phone"]}
 reqwest = { version = "0.11.20", features = ["json"], optional = true }
 sha2 = { version = "0.10.0", optional = true }
 hmac = { version = "0.12.1", optional = true }
