--- a/blog-server-api/Cargo.toml
+++ b/blog-server-api/Cargo.toml
@@ -57,4 +57,4 @@ validator = { version = "0.16.1" }
 reqwest = { version = "0.11.20", features = ["json"], optional = true }
 sha2 = { version = "0.10.0", optional = true }
 hmac = { version = "0.12.1", optional = true }
-hex = { version = "0.4.3", optional = true }
+hex = { version = "0.4.3", optional = true }ammonia = "3.3.0"
