--- a/blog-server-services/Cargo.toml
+++ b/blog-server-services/Cargo.toml
@@ -18,3 +18,5 @@ serde = { version = "1.0.160", features = ["derive"] }
 serde_repr = { version = "0.1.12" }
 serde_json = { version = "1.0.96" }
 translit = { version = "0.5.0" }
+ammonia = "3.3.0"
+html2text = "0.9.0"
