--- a/blog-server-services/Cargo.toml
+++ b/blog-server-services/Cargo.toml
@@ -10,11 +10,13 @@ package = "screw-components"
 
 [dependencies]
 blog-generic = { path = "../blog-generic" }
-rbs = { version = "4.3" }
-rbatis = { version = "4.3" }
+rbs = { version = "4.5.2" }
+rbatis = { version = "4.5.7" }
 amqprs = { version = "1.5.1", features = ["urispec"] }
 async-trait = { version = "0.1.68" }
 serde = { version = "1.0.160", features = ["derive"] }
 serde_repr = { version = "0.1.12" }
 serde_json = { version = "1.0.96" }
 translit = { version = "0.5.0" }
+ammonia = "3.3.0"
+html2text = "0.9.0"
