--- a/blog-server-services/Cargo.toml
+++ b/blog-server-services/Cargo.toml
@@ -20,3 +20,4 @@ serde_json = { version = "1.0.96" }
 translit = { version = "0.5.0" }
 ammonia = "3.3.0"
 html2text = "0.9.0"
+reqwest = { version = "0.11.20", features = ["json"] }
