--- a/blog-generic/Cargo.toml
+++ b/blog-generic/Cargo.toml
@@ -5,4 +5,7 @@ edition = "2021"
 
 [dependencies]
 serde = { version = "1.0.160", features = ["derive"] }
-validator = { version = "0.16.1", features = ["derive", "unic", "phone"] }
+validator = { version = "0.16.1", features = ["derive", "unic", "phone"], optional = true }
+
+[features]
+default = []
