--- a/blog-server-api/Cargo.toml
+++ b/blog-server-api/Cargo.toml
@@ -37,7 +37,7 @@ features = ["server"]
 optional = true
 
 [dependencies]
-blog-generic = { path = "../blog-generic" }
+blog-generic = { path = "../blog-generic", features = ["validator"] }
 blog-server-services = { path = "../blog-server-services" }
 tokio = { version = "1.27.0", features = ["full"] }
 hyper = { version = "0.14.26", features = ["full"] }
