--- a/blog-server-api/Cargo.toml
+++ b/blog-server-api/Cargo.toml
@@ -59,3 +59,7 @@ sha2 = { version = "0.10.0", optional = true }
 hmac = { version = "0.12.1", optional = true }
 hex = { version = "0.4.3", optional = true }
 config = "0.15.6"
+base64 = "0.21.0"
+multer = "2.1.0"
+futures-util = "0.3"
+image = { version = "0.24", default-features = false, features = ["jpeg", "png"] }
