--- a/blog-server-api/Cargo.toml
+++ b/blog-server-api/Cargo.toml
@@ -63,3 +63,4 @@ base64 = "0.21.0"
 multer = "2.1.0"
 futures-util = "0.3"
 image = { version = "0.24", default-features = false, features = ["jpeg", "png"] }
+rand = "0.8"
