--- a/blog-server-api/Cargo.toml
+++ b/blog-server-api/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2021"
 
 [features]
 ssr = ["blog-ui", "sitemap-rs"]
-yandex = ["reqwest", "blog-ui?/yandex"]
+yandex = ["blog-ui?/yandex"]
 telegram = ["sha2", "hmac", "hex", "blog-ui?/telegram"]
 
 [dependencies.screw-components]
@@ -54,7 +54,7 @@ once_cell = "1.18.0"
 chrono = "0.4.29"
 sitemap-rs = { version = "0.2.0", optional = true }
 validator = { version = "0.16.1" }
-reqwest = { version = "0.11.20", features = ["json"], optional = true }
+reqwest = { version = "0.11.20", features = ["json"] }
 sha2 = { version = "0.10.0", optional = true }
 hmac = { version = "0.12.1", optional = true }
 hex = { version = "0.4.3", optional = true }
