--- a/blog-server-api/Cargo.toml
+++ b/blog-server-api/Cargo.toml
@@ -59,3 +59,4 @@ sha2 = { version = "0.10.0", optional = true }
 hmac = { version = "0.12.1", optional = true }
 hex = { version = "0.4.3", optional = true }
 config = "0.15.6"
+uuid = { version = "1.18.0", features = ["std", "v4"] }
