--- a/blog-server-api/Cargo.toml
+++ b/blog-server-api/Cargo.toml
@@ -5,8 +5,9 @@ edition = "2021"
 
 [features]
 ssr = ["blog-ui", "sitemap-rs"]
-yandex = ["blog-ui?/yandex"]
+yandex = ["reqwest", "blog-ui?/yandex"]
 telegram = ["sha2", "hmac", "hex", "blog-ui?/telegram"]
+chatgpt = ["reqwest", "uuid", "blog-ui?/chatgpt"]
 
 [dependencies.screw-components]
 git = "https://github.com/Tikitko/screw.git"
@@ -54,9 +55,9 @@ once_cell = "1.18.0"
 chrono = "0.4.29"
 sitemap-rs = { version = "0.2.0", optional = true }
 validator = { version = "0.16.1" }
-reqwest = { version = "0.11.20", features = ["json"] }
+reqwest = { version = "0.11.20", features = ["json"], optional = true }
 sha2 = { version = "0.10.0", optional = true }
 hmac = { version = "0.12.1", optional = true }
 hex = { version = "0.4.3", optional = true }
 config = "0.15.6"
-uuid = { version = "1.18.0", features = ["std", "v4"] }
+uuid = { version = "1.18.0", features = ["std", "v4"], optional = true }
