--- a/.github/workflows/builds.yml
+++ b/.github/workflows/builds.yml
@@ -13,7 +13,7 @@ env:
 jobs:
   build-matrix:
     runs-on: ubuntu-latest
-
+    name: "Build | Features: ${{ matrix.features }}"
     strategy:
       fail-fast: false
       matrix:
@@ -27,7 +27,6 @@ jobs:
           - "ssr,yandex"
           - "ssr,telegram"
           - "ssr,yandex,telegram"
-
     env:
       SITE_URL: ""
       JWT_SECRET: ""
@@ -36,13 +35,11 @@ jobs:
       RABBIT_URL: ""
       TELEGRAM_BOT_TOKEN: ""
       OPENAI_API_KEY: ""
-
       TELEGRAM_BOT_LOGIN: ""
       TITLE: ""
       DESCRIPTION: ""
       KEYWORDS: ""
       ACCORDION_JSON: ""
-
     steps:
       - name: Checkout
         uses: actions/checkout@v4
