--- a/blog-server-api/Cargo.toml
+++ b/blog-server-api/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 ssr = ["blog-ui", "sitemap-rs"]
 yandex = ["reqwest", "blog-ui?/yandex"]
 telegram = ["sha2", "hmac", "hex", "blog-ui?/telegram"]
+chatgpt = ["reqwest", "uuid", "blog-ui?/chatgpt"]
 
 [dependencies.screw-components]
 git = "https://github.com/Tikitko/screw.git"
@@ -59,3 +60,4 @@ sha2 = { version = "0.10.0", optional = true }
 hmac = { version = "0.12.1", optional = true }
 hex = { version = "0.4.3", optional = true }
 config = "0.15.6"
+uuid = { version = "1.18.0", features = ["std", "v4"], optional = true }
