--- a/blog-server-api/Cargo.toml
+++ b/blog-server-api/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "blog-server-api"
-version = "0.0.1"
-edition = "2021"
+version = "0.0.2"
+edition = "2024"
 
 [features]
 ssr = ["blog-ui", "sitemap-rs"]
@@ -11,22 +11,26 @@ chatgpt = ["uuid", "blog-ui?/chatgpt", "async-openai"]
 
 [dependencies.screw-components]
 git = "https://github.com/Tikitko/screw.git"
+tag = "0.0.2"
 #path = "../../screw/screw-components"
 package = "screw-components"
 
 [dependencies.screw-core]
 git = "https://github.com/Tikitko/screw.git"
+tag = "0.0.2"
 #path = "../../screw/screw-core"
 package = "screw-core"
 
 [dependencies.screw-api]
 git = "https://github.com/Tikitko/screw.git"
+tag = "0.0.2"
 #path = "../../screw/screw-api"
 package = "screw-api"
 features = ["json"]
 
 [dependencies.screw-ws]
 git = "https://github.com/Tikitko/screw.git"
+tag = "0.0.2"
 #path = "../../screw/screw-ws"
 package = "screw-ws"
 
@@ -37,11 +41,16 @@ default-features = false
 features = ["server"]
 optional = true
 
+[dependencies.generic-ui]
+git = "https://github.com/brewpipeline/blog-generic.git"
+tag = "0.0.2"
+features = ["validator"]
+
 [dependencies]
-blog-generic = { path = "../blog-generic", features = ["validator"] }
 blog-server-services = { path = "../blog-server-services" }
 tokio = { version = "1.27.0", features = ["full"] }
-hyper = { version = "0.14.26", features = ["full"] }
+hyper = { version = "1.8.1", features = ["full"] }
+hyper-util = { version = "0.1.19", features = ["tokio"] }
 serde = { version = "1.0.160", features = ["derive"] }
 serde_json = { version = "1.0.104" }
 rbs = { version = "4.5.2" }
@@ -50,15 +59,15 @@ rbdc-pg = { version = "4.5.2" }
 async-trait = { version = "0.1.68" }
 password-hash = "0.5.0"
 argon2 = "0.5.0"
-jsonwebtoken = "9.1.0"
+jsonwebtoken = "10.3.0"
 once_cell = "1.18.0"
 chrono = "0.4.29"
-sitemap-rs = { version = "0.2.0", optional = true }
+sitemap-rs = { version = "0.4.0", optional = true }
 validator = { version = "0.16.1" }
-reqwest = { version = "0.11.20", features = ["json"], optional = true }
+reqwest = { version = "0.13.1", features = ["json"], optional = true }
 sha2 = { version = "0.10.0", optional = true }
 hmac = { version = "0.12.1", optional = true }
 hex = { version = "0.4.3", optional = true }
 config = "0.15.6"
 uuid = { version = "1.18.0", features = ["std", "v4"], optional = true }
-async-openai = { version = "0.23", optional = true }
+async-openai = { version = "0.32.4", optional = true }
