--- a/blog-server-api/Cargo.toml
+++ b/blog-server-api/Cargo.toml
@@ -59,7 +59,7 @@ rbdc-pg = { version = "4.5.2" }
 async-trait = { version = "0.1.68" }
 password-hash = "0.5.0"
 argon2 = "0.5.0"
-jsonwebtoken = "10.3.0"
+jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
 once_cell = "1.18.0"
 chrono = "0.4.29"
 sitemap-rs = { version = "0.4.0", optional = true }
