--- a/blog-server-api/Cargo.toml
+++ b/blog-server-api/Cargo.toml
@@ -36,6 +36,7 @@ package = "screw-ws"
 
 [dependencies.blog-ui]
 git = "https://github.com/Tikitko/blog-ui.git"
+tag = "0.0.2"
 #path = "../../blog-ui"
 default-features = false
 features = ["server"]
