--- a/blog-server-services/Cargo.toml
+++ b/blog-server-services/Cargo.toml
@@ -1,22 +1,26 @@
 [package]
 name = "blog-server-services"
-version = "0.0.1"
-edition = "2021"
+version = "0.0.2"
+edition = "2024"
 
 [dependencies.screw-components]
 git = "https://github.com/Tikitko/screw.git"
+tag = "0.0.2"
 #path = "../../screw/screw-components"
 package = "screw-components"
 
+[dependencies.blog-generic]
+git = "https://github.com/brewpipeline/blog-generic.git"
+tag = "0.0.2"
+
 [dependencies]
-blog-generic = { path = "../blog-generic" }
 rbs = { version = "4.5.2" }
 rbatis = { version = "4.5.7" }
-amqprs = { version = "1.5.1", features = ["urispec"] }
+amqprs = { version = "2.1.3", features = ["urispec"] }
 async-trait = { version = "0.1.68" }
 serde = { version = "1.0.160", features = ["derive"] }
 serde_json = { version = "1.0.96" }
-translit = { version = "0.5.0" }
-ammonia = "3.3.0"
-html2text = "0.9.0"
-reqwest = { version = "0.11.20", features = ["json"] }
+translit = { version = "0.6.0" }
+ammonia = "4.1.2"
+html2text = "0.9.4"
+reqwest = { version = "0.13.1", features = ["json"] }
