--- a/blog-server-services/Cargo.toml
+++ b/blog-server-services/Cargo.toml
@@ -13,6 +13,11 @@ package = "screw-components"
 git = "https://github.com/brewpipeline/blog-generic.git"
 tag = "0.0.2"
 
+[features]
+default = []
+lang_ru = []
+lang_en = []
+
 [dependencies]
 rbs = { version = "4.5.2" }
 rbatis = { version = "4.5.7" }
